categories, contact, and refactoring

--- a/core/templates/core/contact.html
+++ b/core/templates/core/contact.html
@@ -3,5 +3,10 @@
 {% block title %}Contact{% endblock %}
 
 {% block content %}
-  <h1>Contact  Page</h1>
+  <h1 class="text-size-3xl">Contact  Me</h1>
+  <div class="mt-4 flex inline-block">
+      <a href="https://github.com/DeeMo44" target="blank" class="w-24 text-center px-4 py-2 bg-orange-500 text-white rounded-xl hover:bg-orange-700">GitHub</a>
+      <a href="https://www.linkedin.com/in/demario-ward/" target="blank" class="w-24 text-center ml-4 px-4 py-2 bg-blue-500 text-white rounded-xl hover:bg-blue-700">Linkedin</a>
+      <a href=mailto:"demario326@gmail.com" target="blank" class="w-24 text-center ml-4 px-4 py-2 bg-teal-500 text-white rounded-xl hover:bg-teal-700">Email</a>
+  </div>
 {% endblock %}
