--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -54,19 +54,13 @@
         <h3 class="mb-5 font-semibold text-gray-400">About</h3>
 
         <p class="text-lg text-gray-500">
-          Lorem Ipsum bla bla bla Lorem Ipsum bla bla bla Lorem Ipsum bla bla
-          bla
+          Sellio is a very cool app and you should contact DeMario Ward and tell <br> him he did great and that you would like to connect with him on Linkedin.
         </p>
       </div>
 
       <div class="w-1/3">
         <h3 class="mb-5 font-semibold text-gray-400">Menu</h3>
         <ul class="space-y-2">
-          <li>
-            <a href="#" class="text-lg text-teal-500 hover:text-teal-700"
-              >About</a
-            >
-          </li>
           <li>
             <a
               href="{% url 'core:contact' %}"
@@ -75,12 +69,17 @@
             >
           </li>
           <li>
-            <a href="#" class="text-lg text-teal-500 hover:text-teal-700"
+            <a title="This feature is not yet implemented." class="text-lg text-teal-500 hover:text-teal-700 hover:cursor-pointer"
+              >About</a
+            >
+          </li>
+          <li>
+            <a title="This feature is not yet implemented." class="text-lg text-teal-500 hover:text-teal-700 hover:cursor-pointer"
               >Privacy</a
             >
           </li>
           <li>
-            <a href="#" class="text-lg text-teal-500 hover:text-teal-700"
+            <a title="This feature is not yet implemented." class="text-lg text-teal-500 hover:text-teal-700 hover:cursor-pointer"
               >Terms Of Use</a
             >
           </li>
