--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -30,7 +30,7 @@
     <div class="grid grid-cols-3 gap-3">
       {% for category in categories %}
       <div>
-        <a href="#">
+        <a href="{% url 'item:items' %}?query={{ query }}&category={{ category.id }}">
           <div class="p-6 bg-white rounded-b-xl">
             <h2 class="text-2xl">{{ category.name }}</h2>
             <p class="text-gray-500">{{ category.items.count }} items</p>
